<resources>
    <string name="app_name">Maskotas</string>
    <string name="imagen">LogoImagen</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="logo_empresa">Logo de la empresa</string>
    <string name="imagen_facebook">Logo de facebook</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fotousuario">foto usuario</string>
    <string name="cuentamascota">Añadir Mascota</string>
    <string name="cargarimagen">Subir</string>
</resources>
